2003-07-07  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tkImage.c (TkDeleteAllImages,etc.): Stopped the deleting
	of hash entries from a table that has just been deleted by this
	function when some images are Tcl_Preserve()d...  [Bug 749353]

2003-05-20  Jeff Hobbs  <jeffh@ActiveState.com>

	*** 8.4.3 TAGGED FOR RELEASE ***

	* changes: updated for 8.4.3

	* unix/Makefile.in: do not run autoconf during 'make dist' as the
	configure is now a CVS-maintained file and should be up-to-date.

2003-05-19  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Wish.pbproj/project.pbxproj: changed tkConfig.sh location
	in versioned framework subdirectories to be identical to location
	in framework toplevel; fixed stub library symbolic links to be
	tk version specific.

2003-05-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* README:            Bumped version to 8.4.3
	* generic/tk.h:
	* macosx/Wish.pbproj/project.pbxproj:
	* unix/configure:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure:
	* win/configure.in:

	* unix/tkUnixFont.c: use gb2312-raw as the alias for gb2312*
	charset fonts.  gb2312.enc was made to be euc-cn for Tcl because
	that is what is most often meant, but X really wants the original
	(-raw) gb2312 encoding. [Bug 557030]

2003-05-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/msgs/fr.msg: updated msg catalog. [Bug #737790] (zolli)

2003-05-13  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXInit.c (TkpInit): use new versioned bundle 
	resource API to get tk runtime library for TK_VERSION. [Bug 736774]

2003-05-13  Daniel Steffen  <das@users.sourceforge.net>

	backport of Mac OS X specific changes on trunk since 8.4.2:
	
	* macosx/tkMacOSXClipboard.c (TkSelGetSelection): Convert
	'\r' to '\n' on the way into Tcl. (ingham)

	* macosx/tkMacOSXMenu.c (EventuallyInvokeMenu): New function,
	used to invoke menu commands at idle time.
	(TkMacOSXDispatchMenuEvent): Don't immediately dispatch menu